2019-12-17 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: convert dark pixels to optical pixel
   range; use dark pixel in non-lin correction

2019-11-20 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: handle time zone correctly when creating
   spectrum

2019-11-17 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: add method to extract dark pixels

2019-11-17 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: add logging and complain if wavelength
   coefficients cannot be read

2019-11-16 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: add properties to check if spectra
   are saturated; do not clip pixel values; add method to get a tuple of
   wavelength and pixel by default excluding dark pixels

2019-08-01 Magnus Hagdorn
 * piccolo3/common/__init__.py: load new module
 * piccolo3/common/PiccoloScheduler.py: add enum for recording status of
   scheduled jobs

2019-05-11 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: use new method to compute wavelengths

2019-05-08 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: add new method to get wavelengths as a
   numpy array

2019-05-08 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: add method to apply non-linearity
   correction

2019-03-05 Magnus Hagdorn
 * piccolo3/common/__init__.py: loadd new module
 * piccolo3/common/piccoloLogging.py: move logging module from server

2019-02-22 Magnus Hagdorn
 * setup.py: require numpy
 * data/example.pico: add an example spectra file
 * piccolo3/common/PiccoloSpectra.py: add module to handle spectra
 * piccolo3/common/__init__.py: load spectra module

2019-02-22 Magnus Hagdorn
 * start piccolo3-common